--- a/Listas.html
+++ b/Listas.html
@@ -21,6 +21,7 @@
         <li>Noviembre.</li>
         <li>Diciembre.</li>
     </ol>
+    <a name="Estaciones"></a>
     <h1>Estaciones del Año:</h1>
     <ul type="disc">
         <li>Primavera.</li>
@@ -28,6 +29,5 @@
         <li>Otoño.</li>
         <li>Invierno.</li>
     </ul>    
-    
 </body>
 </html>
