--- a/Index.html
+++ b/Index.html
@@ -48,5 +48,65 @@
     <a href="Listas.html#Estaciones">Ir a Listas - seccion estaciones.</a>
     <h3>Enlace para crear un correo electronico.</h3>
     <a href="mailto:jrmdmonleon@hotmail.com">Enviar correo con tus Sugerencias.</a>
+    <hr>
+    <h2>Tablas:</h2>
+    <p>Las Tablas tienen varias etiquetas.</p>
+    <ol>
+        <li>Table - Toda la Tabla</li>
+        <li>Tr - Table row - Renglón de la Tabla</li>
+        <li>Td - Table details - Celda Titulo - Centrado y en negrita</li>
+        <li>Caption - Titulo de toda la Tabla.</li>
+    </ol>
+    <table border="1px" width="60%">
+        <caption>Mi Primera tabla:</caption>
+        <tr>
+            <th>Nombre</th>
+            <th>Email</th>
+            <th>Télefono</th>
+        </tr>
+        <tr>
+            <td>Juan López</td>
+            <td>jlopez@gmail.com</td>
+            <td>649132222</td>
+        </tr>
+        <tr>
+            <td>Juan Ramón</td>
+            <td>jramon@gmail.com</td>
+            <td>917653422</td>
+        </tr>
+        <tr>
+            <td>Paloma Flores</td>
+            <td>palomaflores@gmail.com</td>
+            <td>649346734</td>
+        </tr>
+        <tr>
+            <td>Gabriela Puentes</td>
+            <td>ggpuente@gmail.com</td>
+            <td>649345678</td>
+        </tr>
+        <tr>
+            <td>Alberto Rodrigez</td>
+            <td>albertorodriguez@hotmail.com</td>
+            <td>9232345467</td>
+        </tr>
+    </table>
+    <p>Atributo Colspan - Expandir las Columnas</p>
+    <br>
+    <table width="50%" border="1px">
+        <tr>
+            <th>Titulo 1</th>
+            <th>Título 2</th>
+            <th>Título 3</th>
+        </tr>
+        <tr>
+            <td colspan="2">Celda 1</td>
+            <td>Celda 3</td>
+        </tr>
+        <tr>
+            <td>Celda 4</td>
+            <td>Celda 5</td>
+            <td>Celda 6</td>
+        </tr>
+    </table>
 </body>
 </html>
